<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/img_escuderia"
            android:layout_width="126dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/img_escuderia"
            app:srcCompat="@drawable/escuderia" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/txt_rv_nombreEsc"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/nombre_escuderia"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_rv_anoFundada"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/ano_fundada" />

            <TextView
                android:id="@+id/txt_rv_campeonato"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/nombre_campeonato" />

            <TextView
                android:id="@+id/txt_rv_pais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pais_escuderia" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>