<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MostrarDetalleEscuderias">

    <ImageView
        android:id="@+id/imagenEscuderia"
        android:layout_width="171dp"
        android:layout_height="153dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/escuderia"
        android:contentDescription="@string/imagen" />

    <TextView
        android:id="@+id/txt_anoFundadaDetalle"
        android:layout_width="322dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:text="@string/ano_fundadaDetalle"
        app:layout_constraintEnd_toEndOf="@+id/txt_nomEscuderiaDetalle"
        app:layout_constraintStart_toStartOf="@+id/txt_nomEscuderiaDetalle"
        app:layout_constraintTop_toBottomOf="@+id/txt_nomEscuderiaDetalle" />

    <TextView
        android:id="@+id/txt_paisDetalle"
        android:layout_width="325dp"
        android:layout_height="43dp"
        android:layout_marginTop="28dp"
        android:hint="@string/pais"
        android:text="@string/paisDetalle"
        app:layout_constraintEnd_toEndOf="@+id/txt_anoFundadaDetalle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_anoFundadaDetalle"
        app:layout_constraintTop_toBottomOf="@+id/txt_anoFundadaDetalle" />

    <TextView
        android:id="@+id/txt_CampeonatoDetalle"
        android:layout_width="315dp"
        android:layout_height="44dp"
        android:layout_marginTop="49dp"
        android:text="@string/campeonato_detalle2"
        app:layout_constraintEnd_toEndOf="@+id/txt_paisDetalle"
        app:layout_constraintStart_toStartOf="@+id/txt_paisDetalle"
        app:layout_constraintTop_toBottomOf="@+id/txt_paisDetalle" />

    <TextView
        android:id="@+id/txt_nomEscuderiaDetalle"
        android:layout_width="316dp"
        android:layout_height="41dp"
        android:layout_marginTop="36dp"
        android:text="@string/nomEscuDetalle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenEscuderia" />
</androidx.constraintlayout.widget.ConstraintLayout>