<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActualizarCampeonato2">

    <TextView
        android:id="@+id/txt_actualizar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="120dp"
        android:text="@string/actualizar_campeonato2"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_idCampeonato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/txt_idcampeonato"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/edt_idCampeonato"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt_idCampeonato" />

    <TextView
        android:id="@+id/txt_nombreCampeonato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/txt_nombre_campeonato"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/edt_nomCampeonato"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt_nomCampeonato" />

    <EditText
        android:id="@+id/edt_idCampeonato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="34dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edt_id_campeonato"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_idCampeonato"
        app:layout_constraintTop_toBottomOf="@+id/txt_actualizar2"
        />

    <EditText
        android:id="@+id/edt_nomCampeonato"
        android:layout_width="189dp"
        android:layout_height="47dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:hint="@string/edt_nombre_campeonato"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edt_idCampeonato"
        app:layout_constraintStart_toStartOf="@+id/edt_idCampeonato"
        app:layout_constraintTop_toBottomOf="@+id/edt_idCampeonato" />

    <Button
        android:id="@+id/btn_actualizarCamp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/btn_actualizar_campeonato"
        android:onClick="actualizarCampeonato"
        app:layout_constraintEnd_toEndOf="@+id/edt_nomCampeonato"
        app:layout_constraintStart_toStartOf="@+id/edt_nomCampeonato"
        app:layout_constraintTop_toBottomOf="@+id/edt_nomCampeonato" />
</androidx.constraintlayout.widget.ConstraintLayout>