<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevaEscuderia">

    <TextView
        android:id="@+id/txt_escuderia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="153dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="153dp"
        android:text="@string/nueva_escuderia"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_nombreEscuderia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="98dp"
        android:ems="10"
        android:hint="@string/nombre_escuderia"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_escuderia"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edt_fundada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/ano_fundada"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edt_nombreEscuderia"
        app:layout_constraintStart_toStartOf="@+id/edt_nombreEscuderia"
        app:layout_constraintTop_toBottomOf="@+id/edt_nombreEscuderia"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edt_paisEscuderia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/pais_escuderia"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edt_fundada"
        app:layout_constraintStart_toStartOf="@+id/edt_fundada"
        app:layout_constraintTop_toBottomOf="@+id/edt_fundada"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/sp_campeonato"
        android:layout_width="212dp"
        android:layout_height="59dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_paisEscuderia"
        app:layout_constraintStart_toStartOf="@+id/edt_paisEscuderia"
        app:layout_constraintTop_toBottomOf="@+id/edt_paisEscuderia" />

    <Button
        android:id="@+id/btn_crearEscuderia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:text="@string/anadir_escuderia"
        android:onClick="nuevaEscuderia"
        app:layout_constraintEnd_toEndOf="@+id/sp_campeonato"
        app:layout_constraintStart_toStartOf="@+id/sp_campeonato"
        app:layout_constraintTop_toBottomOf="@+id/sp_campeonato" />
</androidx.constraintlayout.widget.ConstraintLayout>