<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondof1"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_nuevoCampeonato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/nuevo_campeonato"
        android:onClick="nuevoCampeonato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_actualizarCampeonato"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/actualizar_campeonato"
        android:onClick="actualizarCampeonato"
        app:layout_constraintEnd_toEndOf="@+id/btn_nuevoCampeonato"
        app:layout_constraintStart_toStartOf="@+id/btn_nuevoCampeonato"
        app:layout_constraintTop_toBottomOf="@+id/btn_nuevoCampeonato" />

    <Button
        android:id="@+id/btn_borrarCampeonato"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/borrar_campeonato"
        android:onClick="borrarCampeonato"
        app:layout_constraintEnd_toEndOf="@+id/btn_actualizarCampeonato"
        app:layout_constraintStart_toStartOf="@+id/btn_actualizarCampeonato"
        app:layout_constraintTop_toBottomOf="@+id/btn_actualizarCampeonato" />

    <Button
        android:id="@+id/btn_mostrarEscuderias"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/mostrar_escuderias"
        android:onClick="mostrarEscuderias"
        app:layout_constraintEnd_toEndOf="@+id/btn_borrarCampeonato"
        app:layout_constraintStart_toStartOf="@+id/btn_borrarCampeonato"
        app:layout_constraintTop_toBottomOf="@+id/btn_borrarCampeonato" />
</androidx.constraintlayout.widget.ConstraintLayout>